--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Example</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ea laudantium accusamus perferendis officia tempora eius aspernatur odio, asperiores maiores repudiandae? Ipsam magni esse ex, veritatis nesciunt consequuntur dolorem eaque?</p>
+    <ul>
+        <li>Lorem ipsum dolor sit.</li>
+    </ul>
 </body>
 </html>
